# crypto-algo

./: .gitignore  CMakeLists.txt  file.txt
lib/: elg_file_processing.h  elgamal.h  file_utils.h  keys.h  primality_test.h  utils.h
src/: file_utils.cpp
src/Elgamal/: Elgamal.cpp  Elgamal.h  elg_file_processing.cpp  elg_file_processing.h  elgamal.cpp  elgamal.h  keys.cpp  keys.h  primality_test.cpp  primality_test.h  utils.cpp  utils.h
src/Magenta/: mag_file_processing.cpp  mag_file_processing.h  magenta.cpp  magenta.h
tests/: main.cpp
